# cpp-luaw

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LuaWrapperConfig.cmake.in  LuawConfig.cmake.in  README.md  fmt.sh  run_test.sh
.github/workflows/: ci.yml  cmake.yml
example/bind_class/: test.cpp
example/bind_vector/: test.cpp  test.lua
example/config_parser/: test.cpp
example/config_parser2/: conf.lua  test.cpp
example/config_parser3/: test.cpp
example/config_parser3/conf/: base.lua  knight.lua
example/custom_lua_wrapper/: test.cpp
example/custom_luaw/: test.cpp
example/expr_evaluator/: test.cpp
example/with_variable_provider____DEPRECATED_USAGE/: test.cpp
examples/config_parser/: conf.lua  test.cpp
examples/expr_evaluator/: test.cpp
examples/with_variable_provider/: test.cpp
include/peacalm/: lua_wrapper.h  luaw.h
test/: CMakeLists.txt  unit_test.cpp
test/install_test/: CMakeLists.txt  install_test.cpp
test/perf_test/: CMakeLists.txt  perf_test.cpp
test/unit_test/: CMakeLists.txt  bind_functions.cpp  complex_type_conversions.cpp  constructions.cpp  custom_lua_wrapper.cpp  custom_luaw.cpp  eval.cpp  extended_functions.cpp  get_metatable_name.cpp  lightuserdata_metatable.cpp  log.cpp  lua_wrapper_crtp.cpp  luavalue_luavalueref.cpp  luavalueidx_luavalueref.cpp  luaw_crtp.cpp  luaw_function.cpp  main.cpp  main.h  metatable.cpp  nested_objects.cpp  object_destruction.cpp  others.cpp  ptrw.cpp  push.cpp  register_member.cpp  register_static_member.cpp  seek.cpp  set_and_get.cpp  set_ptr_by_wrapper.cpp  simple_type_conversions.cpp  touchtb.cpp  touchtb_and_setfield.cpp  touchtb_and_setkv.cpp  type_conversions.cpp  unique_ptr_with_deleter.cpp  unit_test.cpp  watch_type_conversions.cpp
